--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -555,3 +555,12 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
   background-color: $body-color !important;
   color: $body-bg !important;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
+}
