--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -182,7 +182,7 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
       max-width: 1440px;
     }
   }
-  .navigation {
+  .navigation, #desktop-nav {
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -280,6 +280,20 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
           margin: 10px 10px;
         }
       }
+    }
+  }
+  #desktop-nav.top-to-fix {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    bottom: unset;
+    width: 100%;
+    left: 0;  
+    .nav-bar {
+      padding: 0.5em 0;
+    }
+    .social-icons {
+      display: none;
     }
   }
 }
