--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -176,11 +176,7 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
   padding-bottom: 0;
   position: relative;
   .hero {
-    text-align: center;
-    img {
-      width: 100%;
-      max-width: 1440px;
-    }
+    background-size: cover !important;
   }
   .navigation, #desktop-nav {
     width: 100%;
@@ -328,6 +324,17 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
     .read-more {
       text-align: center;
     }
+
+    .news-image {
+      width: 100%;
+      padding-top: 56.25%;
+    }
+  }
+
+  .load-more {
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -433,9 +440,46 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
         margin: 1.5em 0;
       }
       .player-wrapper {
+        position: relative;
         margin-top: 5em;
         @media (max-width: 479.98px) {
           margin-top: 2em;
+        }
+
+        img {
+          width: 100%;
+        }
+
+        .play-button {
+          position: absolute;
+          top: calc(50% - 50px);
+          left: calc(50% - 50px);
+          width: 100px;
+          height: 100px;
+          display: block;
+          border: 2px solid #fff;
+          border-radius: 50%;
+          padding: 0;
+          margin: 0 auto;
+          user-select: none;
+          background-color: rgba(0, 0, 0, 0.6);
+          transition: background-color 0.5s ease;
+          cursor: pointer;
+          &:after {
+            //play button
+            position: absolute;
+            top: calc(50% - 25px);
+            left: calc(50% - 14px);
+            display: block;
+            content: '';
+            box-sizing: border-box;
+            border-color: transparent transparent transparent #fff;
+            border-style: solid;
+            border-width: 26px 0 26px 40px;
+          }
+          &:hover {
+            background-color: rgba(0, 33, 66, 0.9);
+          }
         }
       }
     }
@@ -479,9 +523,9 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
       font-size: 0.9em;
       padding: 0 3%;
       letter-spacing: 0.22em;
-      @media (max-width: 767.98px) {
-        text-align: center;
-      }
+      // @media (max-width: 767.98px) {
+      //   text-align: center;
+      // }
     }
     img{
       width: 100%;
@@ -492,6 +536,9 @@ html:not([dir="rtl"]) .sidebar-show .sidebar {
     }
     .read-more {
       margin: 1em 0;
+    }
+    .bio-read-more {
+      text-decoration: underline;
     }
   }
 }
